# Changelog

## 0.6.0

- Added the `distinct()` server-side function
- Added type annotations and pre-commit checks as a GH-action
- Fetch ERDDAP servers list from a awesome-erddap

## 0.5.3

- Bugfix: fixed issue with pandas >=1.0.0.

## 0.5.2

 - Dummy release to trigger auto-publish

## 0.5.1

- Bugfix: fixed `get_search_url()` protocol filter in #94.

## 0.5.0

- Do not check server URL when creating the object.
  This allows servers that return 404 when the
  endpoint does not have any requests.

## 0.4.0

- Allow for multiple `csv`s responses in `.to_pandas`.

## 0.3.0

- Cache `_check_url_response` and `get_var_by_attr` returns
- Removed all python 2k code

## 0.2.0

- Add a `get_categorize_url` method
- Test suite for url_builder

## 0.1.11

- Re-factor methods that output a temporary netCDF file.

## 0.1.10

- Add a `to_iris` method.

## 0.1.9

- `erddapy` is not Python 3.7 compatible!
- Fixed a bug in the OPeNDAP URL endpoint.
- Use the `csvp` response in the `to_pandas()` method
  to merge the units in the column name.

## 0.1.8

- Fixed `setup.py` metadata.

## 0.1.7

- Fixed bug that preventing from generating download URLs with no data
  constraints or variables.

## 0.1.6

- Simplify the `erddapy` object constructor.
  Everything but the `server` and `protocol` should be passed as properties
  after the object creation.

## 0.1.5

- Re-implemented caching in `get_var_by_attr()`.

## 0.1.3

- Avoid a caching bug in `get_var_by_attr()` by not caching at all.

## 0.1.3

- New API to make it easier to handle multiple requests from the same server.

## 0.1.2

- Added a workaround to access authenticated ERDDAP servers.

## 0.1.1

- Mostly boilerplate updates for a GitHub/PyPI release.

## 0.1.0

- First version!